Add feed items endpoints (#50)
* Add feed items endpoints

* Change schema
