# joladnijo/urls.py
@@ -26,6 +26,7 @@ handler500 = 'joladnijo.views.handle_500'
 
 router = SimpleRouter()
 router.register(r'aid-centers', views.AidCenterViewSet)
+router.register(r'feed-items', views.FeedItemViewSet)
 
 urlpatterns = [
     path('admin/', admin.site.urls),
